--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'theme';
+
+html, body{
+  width: 100%;
+  height: 100%;
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
+*{
+  box-sizing: border-box;
+  font-family: 'Source Sans Pro', Arial, sans-serif;
+}
+
+p{
+  margin: 0;
+}
