--- a/src/app/favorite-item/favorite-item.component.html
+++ b/src/app/favorite-item/favorite-item.component.html
@@ -7,6 +7,6 @@
     <span style="display: block" class="date">({{this.firstAirDate |  date:'yyyy'}})</span>
   </h3>
   <button style="background-color: white" mat-icon-button (click)="removeFavorite()">
-    <mat-icon [class.favorite]="favorite" class="favorite-icon">delete</mat-icon>
+    <mat-icon [class.favorite]="favorite" style="color:#c1c1c1 " class="favorite-icon">delete</mat-icon>
   </button>
 </div>
