--- a/src/app/favorite-item/favorite-item.component.scss
+++ b/src/app/favorite-item/favorite-item.component.scss
@@ -12,15 +12,11 @@ h3{
   flex-direction: row;
   justify-content: space-between;
   margin-top: 10px;
-  .inner_content{
-
-  }
 }
 .poster {
   display: block;
-  //width: 450px;
   width: 100%;
-  height: 320px;
+  height: 300px;
   position: relative;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -35,12 +31,12 @@ h3{
 }
 
 .date{
-  color: #afaeaf;
+  color: #c1c1c1;
   font-size: 1rem;
 }
 
 .favorite-icon{
-  color: #afaeaf;
+  color: #c1c1c1;
 }
 
 .favorite-icon.favorite{
