--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,13 +1,31 @@
 :host{
-  display: flex;
+  display: block;
+position: relative;
+  margin: 30px 0;
+}
+
+.wrapper{
   width: 1000px;
   margin: 0 auto;
   align-items: center;
-  padding: 30px 0;
 }
-
 h1{
   margin: 0;
-  text-align: center;
-  padding-right: 30px;
+  text-transform: capitalize;
+}
+.mat-tab-links {
+  display: flex;
+  flex-direction: column;
+  color: #303030;
+  width: 100%;
+  position: relative;
+}
+:host:after{
+  content: '';
+  position: absolute;
+  bottom: 0;
+  height: 1px;
+  width: 100%;
+  left: 0;
+  background-color: #e0e0e0;
 }
