--- a/src/app/rank-list/rank-list.component.scss
+++ b/src/app/rank-list/rank-list.component.scss
@@ -1,22 +1,18 @@
 :host {
   display: block;
-  /* height: calc(100% - 100px); */
   position: relative;
   width: 1000px;
   margin: auto;
 }
 
 
-.slide-content {
+.swiper-slide{
+  display: flex; align-items: center; justify-content: center;
   width: 1000px;
   margin: 0 auto;
-  padding-top: 40px;
   padding-bottom: 40px;
   z-index: 0;
-  display: flex;
 }
-
-
 .background-image {
   position: absolute;
   top: 0;
@@ -24,41 +20,41 @@
   bottom: 0;
   right: 0;
   z-index: -1;
-  //overflow: hidden;
   background-image: radial-gradient(circle at 20% 50%, rgba(14.12%, 14.51%, 16.86%, 0.98) 0%, rgba(14.12%, 14.51%, 16.86%, 0.88) 100%);
 
 }
-.slide-content {
-  ////position: absolute;
-  ////width: initial;
-  ////right: 0;
-  //left: unset;
-  padding-top: 0;
-}
-.next-slide{
-  position: absolute;
-  top: calc(50% - 4rem);
-  right: -4rem;
-  font-size: 4rem;
+
+
+.next-slide,
+.prev-slide{
   color: black;
   z-index: 10000;
   cursor: pointer;
   outline: 0;
-  width: 4rem;
-  height: 4rem;
   background-color: #edeced;
+  position: absolute;
+  top: calc(50% - 40px);
+}
+.next-slide{
+  right: -60px;
 }
 
 .prev-slide{
-  position: absolute;
-  left: -4rem;
-  top: calc(50% - 4rem);
-  font-size: 4rem;
-  color: black;
-  cursor: pointer;
-  outline: 0;
-  z-index: 10000;
-  width: 4rem;
-  height: 4rem;
-  background-color: #edeced;
+  left: -60px;
+}
+
+
+.swiper-pagination-bullet {
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  line-height: 20px;
+  font-size: 12px;
+  color:#000;
+  opacity: 1;
+  background: rgba(0,0,0,0.2);
+}
+.swiper-pagination-bullet-active {
+  color:#fff;
+  background: #007aff;
 }
