--- a/src/app/ranked-item/ranked-item.component.html
+++ b/src/app/ranked-item/ranked-item.component.html
@@ -8,9 +8,9 @@
   <span class="date">({{this.firstAirDate |  date:'yyyy'}})</span>
   </h3>
   <div class="vote-area">
-    <h4 class="user-score">vote average {{item.vote_average}}</h4>
-    <button style="background-color: white; position: relative; z-index: 10000" mat-fab (click)="addToFavorites($event)">
-      <mat-icon [class.favorite]="favorite" class="favorite-icon">favorite</mat-icon>
+    <h4 class="user-score">vote average {{item.vote_average * 10}}%</h4>
+    <button style="position: relative; z-index: 10000" class="favorite-icon" mat-fab color="50" (click)="uponFavoritesEvent($event)">
+      <mat-icon [class.favorite]="favorite" >favorite</mat-icon>
     </button>
   </div>
   <h4 class="over-view">Overview</h4>
